ch13 - ordering microposts and cascading destroy user.microposts
- adding dependent destroy to association from user to microposts
- adding default scope to fetch microposts for a user in reverse chronological order of creation
- adding fixtures to make micropost testing easier

--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+tau_manifesto:
+  content: "checkout the manifesto!"
+  created_at: <%= 5.minutes.ago %>
 
-one:
-  content: MyText
-  user: one
+orange:
+  content: "I just ate an orange!"
+  created_at: <%= 3.years.ago %>
 
-two:
-  content: MyText
-  user: two
+cat:
+  content: "Cats are the worst"
+  created_at: <%= 10.months.ago %>
+
+most_recent:
+  content: "Writing a short test"
+  created_at: <%= Time.zone.now %>
