ch13 - add user profile integration test
- with new micropost fixtures

--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,15 +1,26 @@
 tau_manifesto:
   content: "checkout the manifesto!"
   created_at: <%= 5.minutes.ago %>
+  user: michael
 
 orange:
   content: "I just ate an orange!"
   created_at: <%= 3.years.ago %>
+  user: michael
 
 cat:
   content: "Cats are the worst"
   created_at: <%= 10.months.ago %>
+  user: michael
 
 most_recent:
   content: "Writing a short test"
   created_at: <%= Time.zone.now %>
+  user: michael
+
+<% 30.times do |n|%>
+micropost_<%= n %>:
+  content: <%= Faker::Lorem.sentences(5) %>
+  created_at: <%= 42.days.ago %>
+  user: michael
+<% end %>
